--- a/JPA/aps/package.json
+++ b/JPA/aps/package.json
@@ -18,13 +18,16 @@
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.23",
     "react": "^18",
-    "react-dom": "^18"
+    "react-calendar": "^5.1.0",
+    "react-dom": "^18",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "typescript": "^5"
